Env-Setup/iptables
# Generated by iptables-save v1.4.7 on Mon Feb 12 20:06:43 2018
*filter
:INPUT DROP [92:107590]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [414:47042]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 

#ssh
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 

#vsftpd
-A INPUT -p tcp -m tcp --dport 61001:62000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 20 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 61001:62000 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 20 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 21 -j ACCEPT 

#tomcat
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT

#nginx
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT

#mysql
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT

COMMIT
# Completed on Mon Feb 12 20:06:43 2018
